packages/@lwc/ssr-compiler/src/__tests__/fixtures/wire/errors/throws-when-adapter-is-literal/modules/x/wire/wire.js
import { wire, LightningElement } from 'lwc';
export default class Test extends LightningElement {
    @wire('not-an-identifier')
    wiredFoo;
}
